tests/errors/no_singleline_whitespace_before_semicolons.php
<?php

declare(strict_types=1);

$a = 'blabla' ;
